--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,12 +18,12 @@ html:
   use_issues_button: true
   baseurl: https://baeggop.github.io/docs
   extra_footer: |
-    <div>
-     Country borders or names do not necessarily reflect the World Bank Group’s official position. All maps are for illustrative purposes and do not imply the expression of any opinion on the part of the World Bank, concerning the legal status of any country or territory or concerning the delimitation of frontiers or boundaries
-    </div>
-    <div>
-        <b>All content (unless otherwise specified) is subject to the <a href="https://www.mozilla.org/en-US/MPL">Mozilla Public License.</a></b>
-    </div>
+    # <div>
+    #  Country borders or names do not necessarily reflect the World Bank Group’s official position. All maps are for illustrative purposes and do not imply the expression of any opinion on the part of the World Bank, concerning the legal status of any country or territory or concerning the delimitation of frontiers or boundaries
+    # </div>
+    # <div>
+    #     <b>All content (unless otherwise specified) is subject to the <a href="https://www.mozilla.org/en-US/MPL">Mozilla Public License.</a></b>
+    # </div>
   favicon: docs/images/favicon.ico
 
 #######################################################################################
