--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -2,14 +2,14 @@ format: jb-book
 root: README
 
 parts:
-  - caption: Examples
+  - caption: API docs
     numbered: True
     chapters:
-      - file: notebooks/world-bank-api.ipynb
-      - file: notebooks/world-bank-package.ipynb
-      - file: notebooks/nasa-apod.ipynb
-      - file: notebooks/bibliography.ipynb
-      - file: docs/api/v1/API.md
+      # - file: notebooks/world-bank-api.ipynb
+      # - file: notebooks/world-bank-package.ipynb
+      # - file: notebooks/nasa-apod.ipynb
+      # - file: notebooks/bibliography.ipynb
+      - file: docs/api/v1/store.md
   - caption: Gallery
     chapters:
       - file: docs/gallery
