--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -11,16 +11,16 @@ parts:
       # - file: notebooks/bibliography.ipynb
       - file: docs/api/v1/store.md
         # title: store 
-  - caption: Gallery
-    chapters:
-      - file: docs/gallery
-  - caption: Additional Resources
-    chapters:
-      - url: https://datapartnership.org
-        title: Development Data Partnership
-      - url: https://wbdatalab.org
-        title: World Bank Data Lab
-      - url: https://www.worldbank.org/en/about/unit/unit-dec
-        title: World Bank DEC
-      - url: https://www.worldbank.org/en/research/dime
-        title: World Bank DIME
+  # - caption: Gallery
+  #   chapters:
+  #     - file: docs/gallery
+  # - caption: Additional Resources
+  #   chapters:
+  #     - url: https://datapartnership.org
+  #       title: Development Data Partnership
+  #     - url: https://wbdatalab.org
+  #       title: World Bank Data Lab
+  #     - url: https://www.worldbank.org/en/about/unit/unit-dec
+  #       title: World Bank DEC
+  #     - url: https://www.worldbank.org/en/research/dime
+  #       title: World Bank DIME
